mlx90640_video_i2c_postprocessing_sources = [
  'main.cpp',
  'mlx90640.cpp',
  'dev_handler.cpp'
]

mlx90640_video_i2c_postprocessing_deps = [
]

executable('mlx90640_video-i2c_postprocessing', mlx90640_video_i2c_postprocessing_sources,
  dependencies: mlx90640_video_i2c_postprocessing_deps,
  include_directories : include_directories('../include'),
  install: true,
)
